# autoapply-ai

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ralphrc  DEPLOYMENT.md  README.md  UBIQUITOUS_LANGUAGE.md  docker-compose.yml  render.yaml  resume-personal.md  resume.md
backend/: .env.example  Dockerfile  Makefile  alembic.ini  fly.toml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 15d0f847bcc2_initial_schema.py  2988114ea6a5_merge_pr150_with_main_heads.py  3ca41429132c_add_offer_evaluations.py  45ca64ce5f2e_merge_profile_fields_and_file_hash.py  7c7a7d636bb3_add_story_entries.py  a1b2c3d4e5f6_add_file_hash_to_resumes.py  a3f2e1d4c5b6_add_resume_vault.py  a4218c2ef784_merge_heads_for_story_entries.py  a4b8c2d6e1f9_add_profile_fields_to_users.py  b37e76e0b288_add_portal_scan_cache.py  b6d2e4f8a1c3_add_subscription_and_usage_tracking.py  b7c1d2e3f4a5_add_source_to_work_history.py  b7c2d4e6f8a1_drop_enabled_from_user_provider_configs.py  b8e3f9a1c2d4_add_answer_feedback_columns.py  c9f4a2b3d1e5_add_work_history_entries.py  d1e5f3a4b2c6_add_notes_to_applications.py  e2f6a3b4c7d8_add_document_chunks.py  f3a7b1c2d4e5_add_user_provider_configs_table.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: billing_config.py
backend/app/middleware/: circuit_breaker.py  logging_middleware.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  application.py  audit_log.py  base.py  document_chunk.py  offer_evaluation.py  portal_scan.py  resume.py  story.py  subscription.py  usage_record.py  user.py  user_provider_config.py  work_history.py
backend/app/routers/: applications.py  auth.py  billing.py  health.py  reflect.py  resume.py  user_provider_config.py  users.py  vault.py  work_history.py
backend/app/routers/vault/: __init__.py  _shared.py  answers.py  documents.py  generate.py  (+8 more)
backend/app/schemas/: application.py  reflect.py  resume.py  user.py  vault_batch.py
backend/app/services/: __init__.py  application_service.py  ats_service.py  email_classifier_service.py  embedding_service.py  github_service.py  llm_circuit_redis.py  llm_gateway.py  llm_service.py  offer_scoring_service.py  pdf_service.py  portal_scanner_service.py  qa_generation_service.py  rag_service.py  resume_generator.py  resume_parser.py  resume_validator.py  retrieval_agent.py  story_service.py  stripe_service.py  tailoring_pipeline.py  user_provider_configs.py  vector_backend.py  work_history_import.py
backend/app/utils/: audit.py  encryption.py  hashing.py  log_safety.py
backend/scripts/: seed_work_history.py
backend/tests/: conftest.py  test_ats_banner_threshold.py  test_auth_dev_fallback.py  test_auth_register.py  test_auth_register_security.py  test_batch_retrieve.py  test_billing.py  test_clerk_url_required_in_production.py  test_config.py  test_cover_letter_prefetch.py  test_download_endpoint.py  test_email_parsing.py  test_github_config.py  test_github_token_endpoint.py  test_llm_gateway.py  test_llm_gateway_model_param.py  test_models_registered.py  test_offer_scoring_service.py  test_parse_email.py  test_portal_scanner.py  test_provider_keys_server_side.py  test_rag_context_injection.py  test_reflect.py  test_story_bank.py  test_tailor_resume.py  test_user_provider_config.py  test_vault_analytics_shape.py  test_vault_generate_rag.py  test_vault_recall.py  test_vault_router_registration.py  test_vector_backend.py
backend/tests/unit/: test_application_service.py  test_ats_service.py  test_audit.py  test_circuit_breaker.py  test_cors_config.py  test_cover_letter.py  test_decrypted_key.py  test_embedding_service.py  test_github_service.py  test_health.py  test_jwks_rotation.py  test_jwt_security.py  test_llm_gateway_circuit_breaker.py  test_llm_gateway_model_override.py  test_llm_gateway_secret_scrub.py  test_llm_gateway_skip_fallback.py  test_llm_generation_error.py  test_llm_metrics.py  test_llm_metrics_reload.py  test_rag_service.py  test_rate_limit.py  test_resolve_decrypted_key.py  test_resume_parser.py  test_resume_validator.py  test_retrieval_agent.py  test_summary_bullets.py  test_tailor_resume_redis_breaker.py  test_trim_answer.py  test_user_provider_config.py  test_utils.py  test_vault_analytics.py  test_vault_provider_contract.py  test_work_history.py  test_work_history_import.py
(+136 files in other folders)
