[tool.poetry]
name = "autoapply-ai-backend"
version = "0.1.0"
description = "AutoApply AI - Resume tailoring backend"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
httpx = "^0.28.0"
tenacity = "^9.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^44.0.0"
loguru = "^0.7.3"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.0"}
prometheus-fastapi-instrumentator = "^7.0.0"
python-multipart = "^0.0.18"
redis = {extras = ["hiredis"], version = "^5.2.0"}
python-docx = "^1.1.2"
pdfplumber = "^0.11.4"
tiktoken = "^0.12.0"
python-magic-bin = "^0.4.14"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
factory-boy = "^3.3.1"
faker = "^33.0.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "SIM",  # simplify
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "app"
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
